# custom-language-interpreter

./: CMakeLists.txt
Boost_tests/: CMakeLists.txt  ParserTest.cpp  ScannerTest.cpp  config  config_double  test_gen.sh
include/: Configuration.h  DeclarationReader.h  EvaluationVisitor.h  ExpressionDeclarations.h  Expressions.h  Interfaces.h  Launcher.h  Parser.h  RepresentationConverter.cpp  RepresentationConverter.h  Scanner.h  Token.h  Visitor.h
src/: CMakeLists.txt  EvaluationVisitor.cpp  Interfaces.cpp  Launcher.cpp  Parser.cpp  RepresentationConverter.cpp  Scanner.cpp  Token.cpp  Visitor.cpp  main.cpp
